<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
<!--    <include-->
<!--        android:id="@+id/toolbar"-->
<!--        layout="@layout/toolbar"-->
<!--        ></include>-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        app:tabMode="scrollable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/id_semua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tab0"
            android:text="@string/semua" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/id_menunggu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tab1"
            android:text="@string/menunggu" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/id_diproses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tab2"
            android:text="@string/diproses" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/id_bisadiambil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tab3"
            android:text="@string/bisadiambil" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/id_selesai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tab4"
            android:text="@string/selesai" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/id_gagal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tab5"
            android:text="@string/gagal" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:fabSize="normal"
        android:elevation="6dp"
        android:src="@drawable/plus_email"
        android:backgroundTint="@color/PrimaryColor"/>
</androidx.constraintlayout.widget.ConstraintLayout>